Larry's latest work thru 10-11-16, settings.php mods for live/test/local database

--- a/sites/all/modules/rental/accordion.css
+++ b/sites/all/modules/rental/accordion.css
@@ -1,18 +1,18 @@
 /* accordian.css */
 .capt, .capb { 
- background: url("http://rentdurango.net/sites/all/modules/jquery_ui/jquery.ui/demos/real-world/accordion-drawers/images/caps.gif") no-repeat;
+ background: url("http://rentdurango.net/sites/all/modules/jquery_ui/jquery.ui/demos/real-world/accordion-drawers/images/caps.gif") repeat-x;
         height:4px; width:100%; z-index:100; margin:0px; padding:0px }
 .capt { position:absolute; background-position:0 -4px }
 .capb { margin-top:-19px }
-.drawers-wrapper {position:relative; width:188px; float:left; margin:10px }
+.drawers-wrapper {position:relative; width:750px; float:left; margin:10px }
 .drawers { margin-bottom:15px; color:#76797C; font-size:11px; line-height:18px}
 .drawer {
         background:transparent url(http://rentdurango.net/sites/all/modules/jquery_ui/jquery.ui/demos/real-world/accordion-drawers/images/sideboxlight_bg.gif) repeat-y scroll 0pt;
         color:#76797C; font-size:11px; line-height:1.3em; height:1%; /* for IE6 & 7 */}
 .drawer-handle { 
-        background:#939393 url(http://rentdurango.net/sites/all/modules/jquery_ui/jquery.ui/demos/real-world/accordion-drawers/images/slider_handlebg.png) no-repeat scroll 0pt;
+        background:#939393 url(http://rentdurango.net/sites/all/modules/jquery_ui/jquery.ui/demos/real-world/accordion-drawers/images/slider_handlebg.png) repeat-x scroll 0pt;
         color:#333333; cursor:default; height:25px; line-height:25px;
-        text-indent:15px; font-size:12px; width:100% }
+        text-indent: 15px; font-size:12px; width:100% }
 .drawer-handle.open {
         background-color:#72839D; background-position:-188px 0pt; color:#FFFFFF }
 
@@ -26,3 +26,5 @@ h2.drawer-handle span { }
 .drawer-content li a { display:block; overflow:hidden }
 .alldownloads li { border:0pt none; line-height:18px; padding:0pt }
 .drawers a { color:#666666; text-decoration:none; font-family:"Lucida Grande",Geneva,Arial,Verdana,sans-serif }
+#primary .singlepage .node .content .drawers-wrapper ul li {
+background: none;
